--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Bank Resource Scheduler</h1>
+            <h1>Resource Scheduler</h1>
             <div class="simulation-controls">
                 <div class="control-panel">
                     <button id="start-btn" class="btn">Start Simulation</button>
